<resources>
    <string name="app_name">Spendy</string>
    <string name="title_accounts">Accounts</string>
    <string name="title_categories">Categories</string>
    <string name="title_operations">Operations</string>
    <string name="title_statistics">Statistics</string>
    <string name="title_more">More</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="accounts">Accounts</string>
    <string name="categories">Categories</string>
    <string name="operations">Operations</string>
    <string name="statistics">Statistics</string>
    <string name="more">More</string>
</resources>