<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/nav_accounts"
        android:icon="@drawable/ic_accounts"
        android:title="@string/title_accounts" />

    <item
        android:id="@+id/nav_categories"
        android:icon="@drawable/ic_categories"
        android:title="@string/title_categories" />

    <item
        android:id="@+id/nav_operations"
        android:icon="@drawable/ic_operations"
        android:title="@string/title_operations" />

    <item
        android:id="@+id/nav_statistics"
        android:icon="@drawable/ic_statistics"
        android:title="@string/title_statistics" />

    <item
        android:id="@+id/nav_more"
        android:icon="@drawable/ic_more"
        android:title="@string/title_more" />
</menu>