<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_operations">

    <fragment
        android:id="@+id/nav_accounts"
        android:name= "com.example.spendy.fragments.accounts.Accounts_fragment"
        android:label="@string/title_accounts"
        tools:layout="@layout/fragment_accounts" />

    <fragment
        android:id="@+id/nav_categories"
        android:name= "com.example.spendy.fragments.categories.Categories_fragment"
        android:label="@string/title_categories"
        tools:layout="@layout/fragment_categories" />

    <fragment
        android:id="@+id/nav_operations"
        android:name="com.example.spendy.fragments.operations.Operations_fragment"
        android:label="@string/title_operations"
        tools:layout="@layout/fragment_operations" />

    <fragment
        android:id="@+id/nav_statistics"
        android:name="com.example.spendy.fragments.statistics.Statistics_fragment"
        android:label="@string/title_statistics"
        tools:layout="@layout/fragment_statistics" />
</navigation>